--- a/GameEngine/CMakeLists.txt
+++ b/GameEngine/CMakeLists.txt
@@ -3,7 +3,10 @@
 #
 
 # Add source to this project's executable.
-add_executable (GameEngine "GameEngine.cpp" "GameEngine.h")
+file(GLOB SOURCES "*.cpp")
+file(GLOB HEADERS "*.h")
+
+add_executable (GameEngine ${SOURCES} ${HEADERS})
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET GameEngine PROPERTY CXX_STANDARD 20)
