--- a/GameEngine/CMakeLists.txt
+++ b/GameEngine/CMakeLists.txt
@@ -6,7 +6,10 @@
 file(GLOB SOURCES "*.cpp")
 file(GLOB HEADERS "*.h")
 
-add_executable (GameEngine ${SOURCES} ${HEADERS})
+set(GLAD_SRC glad/src/glad.c)
+
+
+add_executable (GameEngine ${SOURCES} ${HEADERS} ${GLAD_SRC})
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET GameEngine PROPERTY CXX_STANDARD 20)
@@ -17,4 +20,5 @@ find_package(OpenGL REQUIRED)
 # TODO: Add tests and install targets if needed.
 add_subdirectory(external/glfw ${CMAKE_CURRENT_BINARY_DIR}/glfw)
 
-target_link_libraries(GameEngine PRIVATE glfw ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY} glu32)
+target_link_libraries(GameEngine PRIVATE glfw ${OPENGL_gl_LIBRARY}) #${OPENGL_glu_LIBRARY} glu32)
+target_include_directories(GameEngine PUBLIC ${PROJECT_SOURCE_DIR}/include PUBLIC glad/include)
