Partial Texture capability implementation, Reorganization, TODO: Finish texture implementaion

--- a/GameEngine/CMakeLists.txt
+++ b/GameEngine/CMakeLists.txt
@@ -24,7 +24,7 @@ target_link_libraries(GameEngine PRIVATE glfw ${OPENGL_gl_LIBRARY}) #${OPENGL_gl
 target_include_directories(GameEngine PUBLIC ${PROJECT_SOURCE_DIR}/include PUBLIC glad/include)
 
 # Define the path to the Shaders directory within the GameEngine folder
-set(SHADERS_DIR "${CMAKE_SOURCE_DIR}/GameEngine/Shaders")
+set(ASSETS_DIR "${CMAKE_SOURCE_DIR}/GameEngine/Assets")
 
 # Define the path to the build directory
 set(BUILD_DIR "${CMAKE_BINARY_DIR}")
@@ -34,4 +34,4 @@ message(STATUS "Source directory for shaders: ${SHADERS_DIR}")
 message(STATUS "Build directory: ${BUILD_DIR}")
 
 # Copy the Shaders directory directly to the build directory
-file(COPY ${SHADERS_DIR} DESTINATION ${BUILD_DIR}/GameEngine)
+file(COPY ${ASSETS_DIR} DESTINATION ${BUILD_DIR}/GameEngine)
